--- a/contact.html
+++ b/contact.html
@@ -23,10 +23,27 @@
         </div>
         <div id="container">
             <div id="main">
-                
+                <h2>Contact Me</h2>
+                <form action=" “htps://wp.zybooks.com/form-viewer.php" method="POST">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <br> <br>
+                    <label for="email">Email</label>
+                    <input type="text" id="email" name="email" placeholder="xxx@gonzaga.edu">
+                    <br> <br>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" rows="5" cols="33">Your Message Here</textarea>
+                    <br> <br>
+                    <input type="submit" id="submit-button">
+
+                </form>
             </div>
             <div id="aside">
-
+                <h2>Contact Details</h2>
+                <p>Email: <a href="mailto: xxx@gonzaga.edu">xxx@gonzaga.edu</a> <br>
+                    <br>
+                    Phone Number: <a href="tel: ">123-456-7890</a>
+                </p>
             </div>
         </div>
     </body>
