--- a/about.html
+++ b/about.html
@@ -1,3 +1,9 @@
+<!-- A client sends an HTTP request to the web (DNS used to figure out the IPv4 address of the URL)
+The request is then delivered to the server . 
+Client and server perform three way handshake to create TCP connection. 
+Then the server finds the requested file (about.html) and returns the HTTP response to the cliend
+The client's browser then processes the response and renders the page.  -->
+
 <!DOCTYPE html>
 <html>
     <head>
