--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- valid IPv4 address: 8.8.8.8 (Google) -->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -43,5 +45,22 @@
         </div>
     </body>
 
+    <script language="JavaScript">
+        function evenCountdown(eNum) {
+            for(let i = 1; i <= eNum; i++) {
+                console.log(i); 
+            }
+        }
+
+        let x = prompt("Enter a number: "); 
+
+        if(x % 2 == 0) {
+            evenCountdown(x); 
+        }
+        else {
+            console.log("This is an odd number"); 
+        }
+
+    </script>
 
 </html>
