--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,6 @@
+<!-- https://nisameshal.github.io/322-midterm/index.html -->
+<!-- GitHub Pages does not render images despite correct directory and naming. Images work on local host -->
+
 <!DOCTYPE html>
 <html>
     <head>
